# eduvis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: comparative-analysis.md  llm_system_prompt.md
docs/examples/: mixed_card_demo.yaml  renderer_test.yaml
docs/rfcs/: template.md
docs/showcase/: README.md  assessment_sandbox.js  constants.py  core_init.py  curriculum.py  demo-adaptive-remediation.yaml  demo-remediation-layout.yaml  editor.css  editor.html  editor.js  eduvis-0.1.0-py3-none-any.whl  eduvis-0.1.1-py3-none-any.whl  eduvis-0.3.0-py3-none-any.whl  eduvis-0.4.0-py3-none-any.whl  eduvis-0.5.0-py3-none-any.whl  eduvis-0.6.0-py3-none-any.whl  eduvis-0.7.0-py3-none-any.whl  engine.py  generic.py  index.html  lesson-geometry-triangles.yaml  lesson-negative-numbers.yaml  lesson-presentation-demo.yaml  main_init.py  pyodide_runner.js  renderer_test.yaml  renderers_base.py  validator.py
docs/showcase/features/: adaptive-remediation-branching-lesson.yaml  adaptive-remediation-branching.yaml  assessment-schemas-lesson.yaml  presentation-sequences-lesson.yaml  presentation-sequences-presentation.yaml  presentation-sequences.yaml  visual-elements-catalog-lesson.yaml
docs/showcase/lessons/: geometry-triangles-spatial-lesson.yaml  geometry-triangles-spatial-presentation.yaml  geometry-triangles-spatial.yaml  negative-numbers-confidence-ladder-lesson.yaml  negative-numbers-confidence-ladder-presentation.yaml  negative-numbers-confidence-ladder.yaml
docs/showcase/reference/: exhaustive-element-catalog.yaml  mixed-content-card.yaml  showcase-curriculum.yaml  singapore-sec1-curriculum.yaml
eduvis/: __init__.py  __main__.py  cli.py
eduvis/core/: __init__.py  blueprint_engine.py  concepts_validator.py  engine.py  export_schema.py  learner_state.py  mastery_projection.py  pedagogy_validator.py  prompt.py  registry.py  remediation_engine.py  revision_engine.py  spaced_repetition.py  step_matchers.py  transition_engine.py  validator.py
eduvis/core/elements/: __init__.py  generic.py  math.py
eduvis/core/schemas/: __init__.py  actions.py  curriculum.py  placement.py  presentation.py  progression.py  relationships.py
eduvis/renderers/: __init__.py
eduvis/renderers/svg/: __init__.py  element_registry.py  primitives.py  renderers_base.py  spec_renderer.py
eduvis/renderers/svg/renderers_math/: __init__.py  equation.py  fraction.py  geometry.py  graph.py  number.py  solid.py
eduvis/schemas/: actions.schema.json  assessment_event.schema.json  assessment_paper.schema.json  curriculum.schema.json  learner_state.schema.json  lesson.schema.json  paper_blueprint.schema.json  placement.schema.json  presentation.schema.json  progression.schema.json  relationships.schema.json  telemetry_event.schema.json
schemas/: actions.schema.json  curriculum.schema.json  lesson.schema.json  placement.schema.json  presentation.schema.json  progression.schema.json
scripts/: build_showcase.py  run_checks.py
tests/: test_assessment_schema.py  test_blueprint_engine.py  test_curriculum_graph.py  test_curriculum_validation.py  test_diagnostic_assessment.py  test_engine.py  test_learner_state.py  test_mastery_bridge.py  test_presentation.py  test_remediation_engine.py  test_revision_engine.py  test_schema_export.py  test_spaced_repetition.py  test_transition_engine.py  test_validate.py
